--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
 <a href="/task5">task5</a>
 <a href="/task6">task6</a>
 <a href="/task7">task7</a>
+<a herf="/jstask1">jstask1</a>
+<a herf="/js4">js4</a>
+<a herf="/js3">js3</a>
+<a herf="/js3.3">js3.3</a>
+<a herf="/js3.3.1">js3.3.1</a>
+<a herf="/js3.2">js3.2</a>
+<a herf="/js2">js2</a>
+<a herf="/js1">js1</a>
 </body>
 </html>
